# glib-course

./: .gitignore  CMakeLists.txt  Makefile  README.md  com.tonygo.app.gschema.xml
src/: main.c  main.cc
